# UGV

./: .gitignore  CMakeLists.txt  package.xml
config/: ugv.yaml
docs/: control_and_state_model.md  hardware_configuration.md  system_architecture.md
firmware/rp2040_zero/: CMakeLists.txt  README.md  pico_sdk_import.cmake
firmware/rp2040_zero/include/ugv_mcu/: command_watchdog.hpp  config.hpp  encoder.hpp  encoder_backend.hpp  encoder_pio.hpp  motor_driver.hpp  protocol.hpp  system_state.hpp  velocity_controller.hpp
firmware/rp2040_zero/src/: command_watchdog.cpp  encoder.cpp  encoder_pio.cpp  encoder_quadrature.pio  main.cpp  motor_command.cpp  motor_driver.cpp  protocol.cpp  system_state.cpp  velocity_controller.cpp
firmware/rp2040_zero/tests/: encoder_motor_test.cpp  protocol_test.cpp
firmware/rp2040_zero/tests/ugv_hw_test/: CMakeLists.txt  README.md
firmware/rp2040_zero/tests/ugv_hw_test/include/ugv_hw_test/: command.hpp
firmware/rp2040_zero/tests/ugv_hw_test/src/: command.cpp  main.cpp
firmware/rp2040_zero/tests/ugv_hw_test/tests/: command_test.cpp  integration_logic_test.cpp
include/ugv/: control_node.hpp  serial_bridge.hpp  track_kinematics.hpp
launch/: ugv.launch.py
src/: control_node.cpp  serial_bridge.cpp  track_kinematics.cpp
tests/: serial_protocol_test.cpp
